# Notely

./: CMakeLists.txt
